clusters/template/app-httproute/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}-${LOCATION}
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ${LOCATION}
      namespace: common
  hostnames:
    - "${APP}.${COMMON_DOMAIN}"
    - "${APP}.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ${APP}
          port: ${APP_PORT}
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}-${LOCATION}
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cdn
      namespace: common
  hostnames:
    - "${APP}.${COMMON_DOMAIN}"
    - "${APP}.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ${APP}
          port: ${APP_PORT}
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
